--- a/package.json
+++ b/package.json
@@ -1,7 +1,28 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "node.js": "^0.0.1-security",
-    "sqlite3": "^5.1.2"
-  }
+    "name": "dynamic-webserver",
+    "version": "0.0.0",
+    "description": "Dynamic Web Server using Node JS",
+    "author": {
+        "name": "",
+        "email": ""
+    },
+    "contributors": [
+        {
+            "name": "",
+            "email": ""
+        },
+        {
+            "name": "",
+            "email": ""
+        }
+    ],
+    "main": "server.js",
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+    "dependencies": {
+        "express": "^4.18.2",
+        "sqlite3": "^5.1.2"
+    }
 }
