--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "express": "^4.18.2",
-        "sqlite3": "^5.1.2"
+        "sqlite3": "^5.1.2",
+        "graph.js": "^3.9.1"
     }
 }
